#14.1 Form and CSRF

--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -8,8 +8,9 @@
 {% endblock search-bar %}
 
 {% block content %}
-
-    Hello!
-
-
+    <form method="POST" action="{% url "users:login" %}">
+        {% csrf_token %}
+        {{form.as_p}}
+        <button>Login</button>
+    </form>
 {% endblock content %}
